syntax = "proto3";

package api.admin.v1;

service SampleService {
	rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
